fix the test and updated pipline